ADD | bank system

--- a/Tasks/00_BankSystem/BankSystem.ipynb
+++ b/Tasks/00_BankSystem/BankSystem.ipynb
@@ -6,20 +6,368 @@
    "metadata": {},
    "source": [
     "# Bank system \n",
-    "## Frozen set "
+    "## Frozen set for each user to save his accounts numbers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insufficient funds\n",
+      "{1001: 56200}\n",
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define a dictionary for Customers accounts  \n",
+    "CUSTOMERS = {}\n",
+    "\n",
+    "#Add a customer to the bank with the given name and account numbers.\n",
+    "def add_customer(name, account_numbers):\n",
+    "    CUSTOMERS[name] = {'accounts': frozenset(account_numbers), 'balances': {}}\n",
+    "\n",
+    "# Remove a customer from the bank with the given name.\n",
+    "def remove_customer(name):\n",
+    "    del CUSTOMERS[name]\n",
+    "\n",
+    "# Get the account numbers for a customer with the given name.\n",
+    "def get_customer_accounts(name):\n",
+    "    return CUSTOMERS[name]['accounts']\n",
+    "\n",
+    "#Deposit funds into the specified account for the customer with the given name.\n",
+    "def deposit(name, account_number, amount):\n",
+    "    if account_number not in CUSTOMERS[name]['balances']:\n",
+    "        CUSTOMERS[name]['balances'][account_number] = amount\n",
+    "    else:\n",
+    "        CUSTOMERS[name]['balances'][account_number] += amount\n",
+    "\n",
+    "\n",
+    "#Withdraw funds from the specified account for the customer with the given name.\n",
+    "def withdraw(name, account_number, amount):\n",
+    "    balance = CUSTOMERS[name]['balances'][account_number]\n",
+    "    if balance < amount:\n",
+    "        print('Insufficient funds')\n",
+    "        return\n",
+    "    CUSTOMERS[name]['balances'][account_number] = balance - amount\n",
+    "\n",
+    "def BankSystem():\n",
+    "    while True:\n",
+    "        print(\"___________| Bank System for admins |__________\")\n",
+    "        print(' please seclect the operation.')\n",
+    "        print(' 1-> Add Customer.')\n",
+    "        print(' 2-> remove admin.')\n",
+    "        print(' 0-> exit.')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "add_customer('Ahmed', [1001, 1002, 1003])\n",
+    "add_customer('Ali', [2001, 2002])\n",
+    "add_customer('Abd', [3001, 3002, 3003, 3004])\n",
+    "\n",
+    "deposit('Ahmed',1001,45600)\n",
+    "deposit('Ahmed',1001,10600)\n",
+    "withdraw ('Ahmed',1001,100000)\n",
+    "\n",
+    "print(CUSTOMERS['Ahmed']['balances'])  \n",
+    "print(CUSTOMERS['Ali']['balances'])  \n",
+    "print(CUSTOMERS['Abd']['balances']) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insufficient funds\n",
+      "{1001: 56200}\n",
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define a dictionary for Customers accounts  \n",
+    "CUSTOMERS = {}\n",
+    "\n",
+    "#Add a customer to the bank with the given name and account numbers.\n",
+    "def add_customer(name, account_numbers):\n",
+    "    CUSTOMERS[name] = {'accounts': frozenset(account_numbers), 'balances': {}}\n",
+    "\n",
+    "# Remove a customer from the bank with the given name.\n",
+    "def remove_customer(name):\n",
+    "    del CUSTOMERS[name]\n",
+    "\n",
+    "# Get the account numbers for a customer with the given name.\n",
+    "def get_customer_accounts(name):\n",
+    "    return CUSTOMERS[name]['accounts']\n",
+    "\n",
+    "#Deposit funds into the specified account for the customer with the given name.\n",
+    "def deposit(name, account_number, amount):\n",
+    "    if account_number not in CUSTOMERS[name]['balances']:\n",
+    "        CUSTOMERS[name]['balances'][account_number] = amount\n",
+    "    else:\n",
+    "        CUSTOMERS[name]['balances'][account_number] += amount\n",
+    "\n",
+    "\n",
+    "#Withdraw funds from the specified account for the customer with the given name.\n",
+    "def withdraw(name, account_number, amount):\n",
+    "    balance = CUSTOMERS[name]['balances'][account_number]\n",
+    "    if balance < amount:\n",
+    "        print('Insufficient funds')\n",
+    "        return\n",
+    "    CUSTOMERS[name]['balances'][account_number] = balance - amount\n",
+    "\n",
+    "def BankSystem():\n",
+    "    while True:\n",
+    "        print(\"___________| Bank System for admins |__________\")\n",
+    "        print(' please seclect the operation.')\n",
+    "        print(' 1-> Add Customer.')\n",
+    "        print(' 2-> remove admin.')\n",
+    "        print(' 0-> exit.')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "add_customer('Ahmed', [1001, 1002, 1003])\n",
+    "add_customer('Ali', [2001, 2002])\n",
+    "add_customer('Abd', [3001, 3002, 3003, 3004])\n",
+    "\n",
+    "deposit('Ahmed',1001,45600)\n",
+    "deposit('Ahmed',1001,10600)\n",
+    "withdraw ('Ahmed',1001,100000)\n",
+    "\n",
+    "print(CUSTOMERS['Ahmed']['balances'])  \n",
+    "print(CUSTOMERS['Ali']['balances'])  \n",
+    "print(CUSTOMERS['Abd']['balances']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Insufficient funds\n",
+      "{1001: 56200}\n",
+      "{}\n",
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define a dictionary for Customers accounts  \n",
+    "CUSTOMERS = {}\n",
+    "\n",
+    "#Add a customer to the bank with the given name and account numbers.\n",
+    "def add_customer(name, account_numbers):\n",
+    "    CUSTOMERS[name] = {'accounts': frozenset(account_numbers), 'balances': {}}\n",
+    "\n",
+    "# Remove a customer from the bank with the given name.\n",
+    "def remove_customer(name):\n",
+    "    del CUSTOMERS[name]\n",
+    "\n",
+    "# Get the account numbers for a customer with the given name.\n",
+    "def get_customer_accounts(name):\n",
+    "    return CUSTOMERS[name]['accounts']\n",
+    "\n",
+    "#Deposit funds into the specified account for the customer with the given name.\n",
+    "def deposit(name, account_number, amount):\n",
+    "    if account_number not in CUSTOMERS[name]['balances']:\n",
+    "        CUSTOMERS[name]['balances'][account_number] = amount\n",
+    "    else:\n",
+    "        CUSTOMERS[name]['balances'][account_number] += amount\n",
+    "\n",
+    "\n",
+    "#Withdraw funds from the specified account for the customer with the given name.\n",
+    "def withdraw(name, account_number, amount):\n",
+    "    balance = CUSTOMERS[name]['balances'][account_number]\n",
+    "    if balance < amount:\n",
+    "        print('Insufficient funds')\n",
+    "        return\n",
+    "    CUSTOMERS[name]['balances'][account_number] = balance - amount\n",
+    "\n",
+    "def BankSystem():\n",
+    "    while True:\n",
+    "        print(\"___________| Bank System for admins |__________\")\n",
+    "        print(' please seclect the operation.')\n",
+    "        print(' 1-> Add Customer.')\n",
+    "        print(' 2-> remove admin.')\n",
+    "        print(' 0-> exit.')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "add_customer('Ahmed', [1001, 1002, 1003])\n",
+    "add_customer('Ali', [2001, 2002])\n",
+    "add_customer('Abd', [3001, 3002, 3003, 3004])\n",
+    "\n",
+    "deposit('Ahmed',1001,45600)\n",
+    "deposit('Ahmed',1001,10600)\n",
+    "withdraw ('Ahmed',1001,100000)\n",
+    "\n",
+    "print(CUSTOMERS['Ahmed']['balances'])  \n",
+    "print(CUSTOMERS['Ali']['balances'])  \n",
+    "print(CUSTOMERS['Abd']['balances']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "___________| Bank System for admins |__________\n",
+      " please seclect the operation.\n",
+      " 1-> Add Customer.\n",
+      " 2-> remove admin.\n",
+      " 3-> get customer accounts.\n",
+      " 4-> deposit.\n",
+      " 5 -> withdraw.\n",
+      "_________________________________________________\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'type' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 66\u001b[0m\n\u001b[0;32m     61\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     62\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mwrong operation number!!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m---> 66\u001b[0m BankSystem()\n\u001b[0;32m     71\u001b[0m \u001b[39m\"\"\" add_customer('Ahmed', [1001, 1002, 1003])\u001b[39;00m\n\u001b[0;32m     72\u001b[0m \u001b[39madd_customer('Ali', [2001, 2002])\u001b[39;00m\n\u001b[0;32m     73\u001b[0m \u001b[39madd_customer('Abd', [3001, 3002, 3003, 3004])\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[39mprint(CUSTOMERS['Ali']['balances'])  \u001b[39;00m\n\u001b[0;32m     81\u001b[0m \u001b[39mprint(CUSTOMERS['Abd']['balances'])  \"\"\"\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[32], line 47\u001b[0m, in \u001b[0;36mBankSystem\u001b[1;34m()\u001b[0m\n\u001b[0;32m     45\u001b[0m name\u001b[39m=\u001b[39m\u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCustomer name :\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     46\u001b[0m \u001b[39mif\u001b[39;00m  operation\u001b[39m==\u001b[39m\u001b[39m1\u001b[39m:\n\u001b[1;32m---> 47\u001b[0m     customer_accounts\u001b[39m=\u001b[39m\u001b[39minput\u001b[39;49m(\u001b[39m\"\u001b[39;49m\u001b[39mcustomer accounts numbers as 0000-0000 ..\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39;49msplit(\u001b[39m\"\u001b[39;49m\u001b[39m-\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39mint\u001b[39;49m)\n\u001b[0;32m     48\u001b[0m     add_customer(name,customer_accounts)\n\u001b[0;32m     49\u001b[0m \u001b[39melif\u001b[39;00m  operation\u001b[39m==\u001b[39m\u001b[39m2\u001b[39m:\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'type' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "# define a dictionary for Customers accounts  \n",
+    "CUSTOMERS = {}\n",
+    "\n",
+    "#Add a customer to the bank with the given name and account numbers.\n",
+    "def add_customer(name, account_numbers):\n",
+    "    CUSTOMERS[name] = {'accounts': frozenset(account_numbers), 'balances': {}}\n",
+    "\n",
+    "# Remove a customer from the bank with the given name.\n",
+    "def remove_customer(name):\n",
+    "    del CUSTOMERS[name]\n",
+    "\n",
+    "# Get the account numbers for a customer with the given name.\n",
+    "def get_customer_accounts(name):\n",
+    "    return CUSTOMERS[name]['accounts']\n",
+    "\n",
+    "#Deposit funds into the specified account for the customer with the given name.\n",
+    "def deposit(name, account_number, amount):\n",
+    "    if account_number not in CUSTOMERS[name]['balances']:\n",
+    "        CUSTOMERS[name]['balances'][account_number] = amount\n",
+    "    else:\n",
+    "        CUSTOMERS[name]['balances'][account_number] += amount\n",
+    "\n",
+    "\n",
+    "#Withdraw funds from the specified account for the customer with the given name.\n",
+    "def withdraw(name, account_number, amount):\n",
+    "    balance = CUSTOMERS[name]['balances'][account_number]\n",
+    "    if balance < amount:\n",
+    "        print('Insufficient funds')\n",
+    "        return\n",
+    "    CUSTOMERS[name]['balances'][account_number] = balance - amount\n",
+    "\n",
+    "def BankSystem():\n",
+    "    while True:\n",
+    "        print(\"___________| Bank System for admins |__________\")\n",
+    "        print(' please seclect the operation.')\n",
+    "        print(' 1-> Add Customer.')\n",
+    "        print(' 2-> remove admin.')\n",
+    "        print(' 3-> get customer accounts.')\n",
+    "        print(' 4-> deposit.')\n",
+    "        print(' 5 -> withdraw.')\n",
+    "\n",
+    "        operation=int(input(\"your operation number : \"))\n",
+    "        print('_________________________________________________')\n",
+    "\n",
+    "        name=input(\"Customer name :\")\n",
+    "        if  operation==1:\n",
+    "            customer_accounts=input(\"customer accounts numbers as 0000-0000 ..\")\n",
+    "            add_customer(name,customer_accounts)\n",
+    "        elif  operation==2:\n",
+    "            remove_customer(name)\n",
+    "        elif  operation==3:\n",
+    "            get_customer_accounts(name)\n",
+    "        elif  operation==4:\n",
+    "            customer_account=int(input(\" customer account: \"))\n",
+    "            amount=int(input(\" customer amount to deposit : \"))\n",
+    "            deposit(name,customer_account,amount)\n",
+    "        elif  operation==5:\n",
+    "            customer_account=int(input(\" customer account: \"))\n",
+    "            amount=int(input(\" customer amount to withdraw : \"))\n",
+    "            withdraw(name,customer_account,amount)\n",
+    "        else:\n",
+    "            print(\"wrong operation number!!\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "BankSystem()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\"\"\" add_customer('Ahmed', [1001, 1002, 1003])\n",
+    "add_customer('Ali', [2001, 2002])\n",
+    "add_customer('Abd', [3001, 3002, 3003, 3004])\n",
+    "\n",
+    "deposit('Ahmed',1001,45600)\n",
+    "deposit('Ahmed',1001,10600)\n",
+    "withdraw ('Ahmed',1001,100000)\n",
+    "\n",
+    "print(CUSTOMERS['Ahmed']['balances'])  \n",
+    "print(CUSTOMERS['Ali']['balances'])  \n",
+    "print(CUSTOMERS['Abd']['balances'])  \"\"\""
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
