MODIFY| Facebook System.

--- a/Tasks/00_POST_TO_FACEBOOK/POST_FaceBook_Page.ipynb
+++ b/Tasks/00_POST_TO_FACEBOOK/POST_FaceBook_Page.ipynb
@@ -10,25 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"error\":{\"message\":\"(#200) If posting to a group, requires app being installed in the group, and \\\\\\n          either publish_to_groups permission with user token, or both pages_read_engagement \\\\\\n          and pages_manage_posts permission with page token; If posting to a page, \\\\\\n          requires both pages_read_engagement and pages_manage_posts as an admin with \\\\\\n          sufficient administrative permission\",\"type\":\"OAuthException\",\"code\":200,\"fbtrace_id\":\"A_MD7dypCQBQbpYN3TMGOrs\"}}\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'FaceBookConfig'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m# define your facebook page id \u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFaceBookConfig\u001b[39;00m \u001b[39mimport\u001b[39;00m ES_Page_id \n\u001b[0;32m      5\u001b[0m \u001b[39m# define your facebook page  access token \u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mFaceBookConfig\u001b[39;00m \u001b[39mimport\u001b[39;00m FaceBookAccessToken \n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'FaceBookConfig'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "' posts_data=requests.get(get_AllPosts_url)\\nposts_data=json.loads(posts_data.text)\\nposts_data=json.dumps(posts_data,indent=2)\\nprint(posts_data) '"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
